--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,46 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CaliBot</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Menu</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-  <main>
-    <section class="hero">
-      <div class="hero-content">
-        <h1>Welcome to CaliBot</h1>
-        <p>Experience the future of AI communication</p>
-      </div>
-    </section>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <section class="chatbot">
-      <div class="chatbot-content">
-        <div id="chat-box">
-          <!-- Initial chat messages removed as per your request -->
-        </div>
-        <input type="text" id="user-input" placeholder="Type your message...">
-        <button onclick="sendMessage()">Send</button>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 CaliBot. All rights reserved.</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
+    <title>React App</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
